# emblem

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  PERSONALIZATION_PROJECT.md  README.md  render.yaml
.claude/: launch.json
backend/: requirements-cloud.txt  requirements.txt  server.py
backend/emblem/: __init__.py  alerts.py  scheduler.py
backend/tests/: test_api.py  test_kernel.py  test_tools.py
backend/veyra/: __init__.py  alerts.py  scheduler.py
cloud/migrations/: 001_multiuser.sql  002_backfill_admin.sql
cloud/supabase/: config.toml
docs/: BUILD_PLAN.md  LOCAL_CORE_SPRINT_STATUS.md  TAURI_PACKAGING.md  VEYRA_POWERHOUSE_FRAMEWORK.md  VEYRA_VOICE_CLONE_INTEGRATION.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.svelte  app.css  main.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
skills/: SKILLS.md
skills/code/: debugging-and-review.md  project-scaffolding.md  terminal-and-execution.md  writing-code.md
skills/content/: content-strategy.md  social-media.md
skills/documents/: academic-writing.md  business-and-personal.md  creative-and-copy.md  reports-and-proposals.md
skills/office/: data-visualization.md  spreadsheets.md  word-and-pdf.md
skills/research/: web-research.md
stitch_emblem_core_ui/account_settings/: code.html
stitch_emblem_core_ui/automations_workflows/: code.html
stitch_emblem_core_ui/emblem_1/: DESIGN.md
worker/: package-lock.json  package.json  wrangler.toml
(+202 files in other folders)
