[package]
name = "emblem"
version = "0.1.0"
description = "Emblem — Master Judah's AI operator"
edition = "2021"

# lib target required for Tauri Android (loaded as a JNI shared library)
[lib]
name = "emblem_lib"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
ureq = { version = "2", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
